force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/FinancialAccountUIConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>FinancialAccountUIConfiguration</label>
    <pluralLabel>FinancialAccountUIConfigurations</pluralLabel>
</CustomObject>