force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Type of the financial account</description>
    <label>Account Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Savings</fullName>
                <default>true</default>
                <label>Savings</label>
            </value>
            <value>
                <fullName>Non Savings</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>