force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Balance_Title__c.field-meta.xml
<CustomField>
    <fullName>Balance_Title__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Balance Title for each account.</description>
    <label>Balance Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>