force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/FinancialAccountConfiguration__c.field-meta.xml
<CustomField>
    <fullName>FinancialAccountConfiguration__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>This is to map the icon and transaction title to the corresponding type of financial account</description>
    <label>FinancialAccountConfiguration</label>
    <referenceTo>FinancialAccountConfiguration__mdt</referenceTo>
    <relationshipLabel>FinancialAccountUIConfigurations</relationshipLabel>
    <relationshipName>FinancialAccountUIConfigurations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>