force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Include_In_Total_Financial_Position__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Total_Financial_Position__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>This field decides if the product code should be included in total financial position calculation</description>
    <label>Include In Total Financial Position</label>
    <type>Checkbox</type>
</CustomField>