force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Determines whether a certain product is ready to be shown on. Financial Account UI from Business perspective.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>