force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Owner ship type on Financial Account</description>
    <label>Ownership Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
                <default>true</default>
                <label>Single</label>
            </value>
            <value>
                <fullName>Multi-party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>