force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Product code from Product2 table</description>
    <label>Product Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>