force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Product Name to be displayed for each account in UI</description>
    <label>Product Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>