force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Section_Header_Title__c.field-meta.xml
<CustomField>
    <fullName>Section_Header_Title__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Header title to be displayed on LWC</description>
    <label>Section Header Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>