force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/fields/Show_Goals__c.field-meta.xml
<CustomField>
    <fullName>Show_Goals__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Controls whether to show goals on Salesforce UI</description>
    <label>Show Goals</label>
    <type>Checkbox</type>
</CustomField>