force-app/main/default/objects/FinancialAccountUIConfiguration__mdt/listViews/FinancialAccountUIConfiguration.listView-meta.xml
<ListView>
    <fullName>FinancialAccountUIConfiguration</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Product_Code__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Show_Goals__c</columns>
    <columns>Ownership_Type__c</columns>
    <columns>Balance_Title__c</columns>
    <columns>Section_Header_Title__c</columns>
    <columns>Include_In_Total_Financial_Position__c</columns>
    <columns>Is_Active__c</columns>
    <columns>FinancialAccountConfiguration__c</columns>
    <filters>
        <field>Product_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <filterScope>Everything</filterScope>
    <label>FinancialAccountUIConfiguration</label>
    <language>en_US</language>
</ListView>